[package]
name = "discalen"
version = "0.1.0"
authors = ["Anton Parfonov <antonparfonov@gmail.com>"]
edition = "2021"
description = "A bot to notify your discord server about upcoming events"
repository = "https://github.com/YBoy-git/discalen"
license = "MIT"
keywords = ["discord", "bot"]
categories = [" "] # TODO: add categories

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.37"
dotenvy = "0.15.7"
google-calendar3 = "5.0.4"
hyper = "1.2.0"
hyper-rustls = "0.27.0"
oauth2 = "4.4.2"
once_cell = "1.19.0"
serenity = "0.12.1"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
yup-oauth2 = "8.3.3"

[lints.rust]
future-incompatible = "warn"
[lints.clippy]
# nursery = "warn"
# pedantic = "warn"

[[bin]]
name = "testing"
path = "src/testing.rs"
